# MultiUserQuiz

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
MultiUserQuiz/: CMakeLists.txt  MultiUserQuiz.cpp  MultiUserQuiz.h  QuizDefs.cpp  QuizDefs.h  QuizMgr.cpp  QuizMgr.h
MultiUserQuiz/Answer/: Answer.cpp  Answer.h
MultiUserQuiz/ClientApp/: ClientConnMgr.cpp  ClientConnMgr.hpp  ClientConnectionManager.cpp  ClientConnectionManager.hpp  ClientQuizController.cpp  ClientQuizController.hpp  ClientSessionManager.cpp  ClientSessionManager.hpp  MultiUserQuizClient.cpp  QuizClientUI.cpp  QuizClientUI.hpp
MultiUserQuiz/Config/: QuizConfig.cpp  QuizConfig.h
MultiUserQuiz/Question/: Question.cpp  Question.h  QuestionBank.cpp  QuestionBank.h
MultiUserQuiz/QuestionTimer/: QuestionTimer.cpp  QuestionTimer.h
MultiUserQuiz/Result/: Result.cpp  Result.h
MultiUserQuiz/ServerApp/: ConnectionManager.cpp  ConnectionManager.hpp  ConnectionMgr.cpp  ConnectionMgr.hpp  ConnectionMgr_OLDcpp.text  MultiUserQuizServer.cpp  OptimizedModularizedCode.txt  QuizController.cpp  QuizController.hpp  QuizStateManager.cpp  QuizStateManager.hpp  SessionManager.cpp  SessionManager.hpp
MultiUserQuiz/User/: User.cpp  User.h
Resources/: QuizBank.xlsx  quiz_config.ini  server.crt  server.key
